--- a/TRIOS_MOBILE_3/Base.lproj/Main.storyboard
+++ b/TRIOS_MOBILE_3/Base.lproj/Main.storyboard
@@ -79,10 +79,110 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="p2D-a0-NH0" kind="show" identifier="InstrumentSegue" id="Edb-cw-I2l"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fsr-AC-RFS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1428" y="489"/>
+            <point key="canvasLocation" x="1403" y="489"/>
+        </scene>
+        <!--Method-->
+        <scene sceneID="p8o-tP-oGR">
+            <objects>
+                <viewController id="b01-xT-QQ7" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3fP-9G-cwZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="yH4-jC-72B"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="siK-bT-hIF">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efM-vw-bTJ">
+                                <rect key="frame" x="229" y="81" width="143" height="30"/>
+                                <state key="normal" title="Next Segment"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="efM-vw-bTJ" firstAttribute="centerX" secondItem="siK-bT-hIF" secondAttribute="centerX" id="85m-zQ-mTr"/>
+                            <constraint firstItem="efM-vw-bTJ" firstAttribute="centerX" secondItem="siK-bT-hIF" secondAttribute="centerX" id="kfG-q1-9Za"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Method" id="idx-em-old"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z6Z-3m-sw4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3236" y="687"/>
+        </scene>
+        <!--Signals-->
+        <scene sceneID="ujf-Ou-sat">
+            <objects>
+                <viewController id="QiE-0p-Ynu" customClass="MecurySignalsViewController" customModule="TRIOS_MOBILE_3" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ggs-uv-2Ko"/>
+                        <viewControllerLayoutGuide type="bottom" id="fiS-bp-KqR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="o9f-fG-Hiy">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="i4V-w4-M1K">
+                                <rect key="frame" x="240" y="72" width="121" height="29"/>
+                                <segments>
+                                    <segment title="Signals"/>
+                                    <segment title="Chart"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentSelectionChanged:" destination="QiE-0p-Ynu" eventType="valueChanged" id="3cH-TQ-aeI"/>
+                                </connections>
+                            </segmentedControl>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qfz-Bv-ChB">
+                                <rect key="frame" x="0.0" y="114" width="600" height="429"/>
+                                <connections>
+                                    <segue destination="YHL-vN-3lR" kind="embed" id="B6w-7O-AU1"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Oio-eU-Nnm">
+                                <rect key="frame" x="0.0" y="114" width="600" height="429"/>
+                                <connections>
+                                    <segue destination="GTg-kQ-fgT" kind="embed" id="4OB-lU-0nu"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="i4V-w4-M1K" firstAttribute="centerX" secondItem="o9f-fG-Hiy" secondAttribute="centerX" id="C1g-Qj-3Jl"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Signals" id="BJd-6Q-juW"/>
+                    <connections>
+                        <outlet property="_chartView" destination="Oio-eU-Nnm" id="eqI-GK-E73"/>
+                        <outlet property="_signalsView" destination="qfz-Bv-ChB" id="Zbk-wH-rEw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N5f-X1-YUz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3249" y="-75"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="CKQ-eT-Njt">
+            <objects>
+                <tabBarController id="p2D-a0-NH0" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="VuW-XW-z8f">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="QiE-0p-Ynu" kind="relationship" relationship="viewControllers" id="Mqy-pV-4y2"/>
+                        <segue destination="b01-xT-QQ7" kind="relationship" relationship="viewControllers" id="nra-BV-I49"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CbW-OV-1Ke" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2070" y="489"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="06O-9i-aE5">
@@ -101,6 +201,63 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qMO-cX-mw7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="616" y="489"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1HT-xQ-rlv">
+            <objects>
+                <viewController id="83G-GH-EUN" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="93s-Fn-BmT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oqZ-ag-YDb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="YtX-b4-HCt">
+            <objects>
+                <viewController id="YHL-vN-3lR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sSc-Js-LRm">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="429"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Signals go here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nFB-Vd-6Lr">
+                                <rect key="frame" x="224" y="204" width="153" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Hn-Yz-dMK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4064" y="-317.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="eKW-oX-1yB">
+            <objects>
+                <viewController id="GTg-kQ-fgT" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Fgi-Ra-dA1">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="429"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Chart goes here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RhE-0G-T1L">
+                                <rect key="frame" x="215" y="204" width="171" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wLx-5T-hFx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4064" y="270.5"/>
         </scene>
     </scenes>
     <resources>
